# meeting_room_rsv

./: .gitignore  CMakeLists.txt  README.md  icon.rc
FluentUI/: CMakeLists.txt
FluentUI/.cmake/: GetGitRevisionDescription.cmake
FluentUI/example/qml/chart/: T_BarChart.qml
FluentUI/src/: CMakeLists.txt  WindowLifecycle.cpp
FluentUI/src/Qt5/imports/FluentUI/Controls/: FluAppBar.qml  FluWindow.qml
FluentUI/src/Qt6/imports/FluentUI/Controls/: FluAppBar.qml  FluWindow.qml
qml/: AdminWindow.qml  App.qml  DbSetWindow.qml  LoginWindow.qml  PageWindow.qml  RejectWindow.qml  RoomAddWindow.qml  RoomDetailWindow.qml  RoomEditWindow.qml  RsvDetailWindow.qml  RsvWindow.qml  UsrWindow.qml
qml/page/: SettingsPage.qml
qml/page/admin/: ApprovalPage.qml  RoomMngPage.qml  RsvCheckPage.qml
qml/page/usr/: RoomCheckPage.qml  RsvCheckPage.qml  RsvPage.qml
src/: DatabaseManager.cpp  DatabaseManager.h  SettingsHelper.h  Version.h  main.cpp
